...
    <string name="filter">Filter</string>
    <string name="interested">Interested</string>
    <string name="delete_event">Delete</string>
    <string name="update_event">Update</string>
    <string name="search">Search by Name</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="sign_up_hint">Don\'t have an Account? Click Here!</string>
    <string name="step_tracker">Step Tracker</string>
    <string name="username">Username</string>


</resources>
...
