<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id = "@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp"
        />


    <item
        android:id = "@+id/add"
        android:title="@string/create"
        android:icon="@drawable/ic_add_circle_black_24dp"
        />

    <item
        android:id = "@+id/manage"
        android:title="@string/manage_events"
        android:icon="@drawable/ic_edit_black_24dp"/>


    <item
        android:id = "@+id/profile"
        android:title="@string/profile"
        android:icon = "@drawable/ic_person_black_24dp"/>



</menu>